// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DataPoint matches Default story snapshot 1`] = `
<div>
  <div
    class="flex flex-wrap items-center gap-1 mb-2"
  >
    <div
      class="flex w-full items-center gap-2"
    >
      <div
        class="text-gray-500"
      >
        <svg
          class="w-4 h-4"
          fill="currentColor"
          height="1em"
          viewBox="0 0 256 256"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm88,104a87.62,87.62,0,0,1-6.4,32.94l-44.7-27.49a15.92,15.92,0,0,0-6.24-2.23l-22.82-3.08a16.11,16.11,0,0,0-16,7.86h-8.72l-3.8-7.86a15.91,15.91,0,0,0-11-8.67l-8-1.73L96.14,104h16.71a16.06,16.06,0,0,0,7.73-2l12.25-6.76a16.62,16.62,0,0,0,3-2.14l26.91-24.34A15.93,15.93,0,0,0,166,49.1l-.36-.65A88.11,88.11,0,0,1,216,128ZM143.31,41.34,152,56.9,125.09,81.24,112.85,88H96.14a16,16,0,0,0-13.88,8l-8.73,15.23L63.38,84.19,74.32,58.32a87.87,87.87,0,0,1,69-17ZM40,128a87.53,87.53,0,0,1,8.54-37.8l11.34,30.27a16,16,0,0,0,11.62,10l21.43,4.61L96.74,143a16.09,16.09,0,0,0,14.4,9h1.48l-7.23,16.23a16,16,0,0,0,2.86,17.37l.14.14L128,205.94l-1.94,10A88.11,88.11,0,0,1,40,128Zm102.58,86.78,1.13-5.81a16.09,16.09,0,0,0-4-13.9,1.85,1.85,0,0,1-.14-.14L120,174.74,133.7,144l22.82,3.08,45.72,28.12A88.18,88.18,0,0,1,142.58,214.78Z"
          />
        </svg>
      </div>
      <dt
        class="text-sm font-medium uppercase text-gray-500"
      >
        Region
      </dt>
    </div>
    <dd
      class="text-sm text-gray-900"
    >
      North America • Northern America
    </dd>
  </div>
</div>
`;

exports[`DataPoint matches WithGDP story snapshot 1`] = `
<div>
  <div
    class="flex flex-wrap items-center gap-1 mb-2"
  >
    <div
      class="flex w-full items-center gap-2"
    >
      <div
        class="text-gray-500"
      >
        <svg
          class="w-4 h-4"
          fill="currentColor"
          height="1em"
          viewBox="0 0 256 256"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm40-68a28,28,0,0,1-28,28h-4v8a8,8,0,0,1-16,0v-8H104a8,8,0,0,1,0-16h36a12,12,0,0,0,0-24H116a28,28,0,0,1,0-56h4V72a8,8,0,0,1,16,0v8h16a8,8,0,0,1,0,16H116a12,12,0,0,0,0,24h24A28,28,0,0,1,168,148Z"
          />
        </svg>
      </div>
      <dt
        class="text-sm font-medium uppercase text-gray-500"
      >
        GDP
      </dt>
    </div>
    <dd
      class="text-sm text-gray-900"
    >
      $25,500,000,000,000
    </dd>
  </div>
</div>
`;

exports[`DataPoint matches WithInflationRate story snapshot 1`] = `
<div>
  <div
    class="flex flex-wrap items-center gap-1 mb-2"
  >
    <div
      class="flex w-full items-center gap-2"
    >
      <div
        class="text-gray-500"
      >
        <svg
          class="w-4 h-4"
          fill="currentColor"
          height="1em"
          viewBox="0 0 256 256"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M232,208a8,8,0,0,1-8,8H32a8,8,0,0,1-8-8V48a8,8,0,0,1,16,0v94.37L90.73,98a8,8,0,0,1,10.07-.38l58.81,44.11L218.73,90a8,8,0,1,1,10.54,12l-64,56a8,8,0,0,1-10.07.38L96.39,114.29,40,163.63V200H224A8,8,0,0,1,232,208Z"
          />
        </svg>
      </div>
      <dt
        class="text-sm font-medium uppercase text-gray-500"
      >
        Inflation Rate
      </dt>
    </div>
    <dd
      class="text-sm text-gray-900"
    >
      3.2%
    </dd>
  </div>
</div>
`;

exports[`DataPoint matches WithNumericValue story snapshot 1`] = `
<div>
  <div
    class="flex flex-wrap items-center gap-1 mb-2"
  >
    <div
      class="flex w-full items-center gap-2"
    >
      <div
        class="text-gray-500"
      >
        <svg
          class="w-4 h-4"
          fill="currentColor"
          height="1em"
          viewBox="0 0 256 256"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M100,116.43a8,8,0,0,0,4-6.93v-72A8,8,0,0,0,93.34,30,104.06,104.06,0,0,0,25.73,147a8,8,0,0,0,4.52,5.81,7.86,7.86,0,0,0,3.35.74,8,8,0,0,0,4-1.07ZM88,49.62v55.26L40.12,132.51C40,131,40,129.48,40,128A88.12,88.12,0,0,1,88,49.62ZM128,24a8,8,0,0,0-8,8v91.82L41.19,169.73a8,8,0,0,0-2.87,11A104,104,0,1,0,128,24Zm0,192a88.47,88.47,0,0,1-71.49-36.68l75.52-44a8,8,0,0,0,4-6.92V40.36A88,88,0,0,1,128,216Z"
          />
        </svg>
      </div>
      <dt
        class="text-sm font-medium uppercase text-gray-500"
      >
        Score
      </dt>
    </div>
    <dd
      class="text-sm text-gray-900"
    >
      95
    </dd>
  </div>
</div>
`;

exports[`DataPoint matches WithoutIcon story snapshot 1`] = `
<div>
  <div
    class="flex flex-wrap items-center gap-1 mb-2"
  >
    <div
      class="flex w-full items-center gap-2"
    >
      <dt
        class="text-sm font-medium uppercase text-gray-500"
      >
        Population
      </dt>
    </div>
    <dd
      class="text-sm text-gray-900"
    >
      331,000,000
    </dd>
  </div>
</div>
`;
